<resources>
    <string name="app_name">ConnectingUs</string>
    <string name="welcome">Welcome to ConnectingUs</string>
    <string name="agree_terms">Agree and Continue</string>
    <string name="terms">Click on \'Agree and Continue\' to accept the ConnectingUs\'s \nPrivacy Policy and Terms &amp; Conditions</string>
    <string name="info">ConnectingUs will send an SMS message to verify your phone number. Enter your phone number.</string>
    <string name="phone_number">Phone number</string>
    <string name="next">Next</string>
    <string name="verify_your_phone_number">Verify your phone number</string>
    <string name="btn_continue">continue</string>
    <string name="helper_name">This name will be visible to your ConnectingUs contacts</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>