<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.FirstActivity"
    android:id="@+id/layout"
    android:background="@color/white">

    <TextView
        android:id="@+id/tv_uname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/verify_your_phone_number"
        android:textSize="22sp"
        android:textColor="#AF4444"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/info"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/info"
        app:layout_constraintEnd_toEndOf="@+id/tv_uname"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="@+id/tv_uname"
        app:layout_constraintTop_toBottomOf="@+id/tv_uname" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ph_label"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="277dp"
        android:layout_height="wrap_content"

        android:layout_marginTop="84dp"
        android:hint="@string/phone_number"
        app:counterEnabled="true"
        app:counterMaxLength="10"

        app:errorEnabled="true"
        app:helperText="Enter your phone number here"
        app:helperTextEnabled="true"

        app:layout_constraintEnd_toEndOf="@+id/info"
        app:layout_constraintHorizontal_bias="0.574"
        app:layout_constraintStart_toStartOf="@+id/info"
        app:layout_constraintTop_toBottomOf="@+id/info"
        app:prefixText="+91"
        app:startIconDrawable="@drawable/telephone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="10" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30sp"
        android:layout_marginBottom="56dp"
        android:backgroundTint="#AF4444"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/info"
        app:layout_constraintStart_toStartOf="@+id/info" />

</androidx.constraintlayout.widget.ConstraintLayout>